[package]
name = "iotex-antenna-rust"
version = "0.1.0"
authors = ["Frank <frankonly@aliyun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.3"
tiny-keccak = "1.5.0"
hex = "0.4.0"
secp256k1 = { version = "0.15.5", features = ["recovery"] }
rand = "0.6.0"
bech32 = "0.7.1"
